validators: fix view on mobiles

--- a/styles/ui.scss
+++ b/styles/ui.scss
@@ -504,7 +504,7 @@ table {
     padding: 20px;
     background-color: var(--background-main);
     width: calc(50% - 50px); //gap:20/2 + 2*20px
-    min-width: 300px;
+    min-width: 280px;
     flex-grow: 1;
   }
 }
